--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
@@ -48,7 +49,7 @@
     "eslint": "^6.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "husky": "^3.0.1",
+    "husky": "^3.0.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react-hot-loader": "^4.12.10",
