--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node server.js",
     "test": "",
     "format": "pretty-quick",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "coveralls": "npm run test -- --coverageReporters=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "autoprefixer": "^9.6.1",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.1.0",
+    "coveralls": "^3.0.5",
     "express": "^4.17.1",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
