--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
@@ -53,6 +56,7 @@
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react-hot-loader": "^4.12.10",
+    "redux-immutable-state-invariant": "^2.1.0",
     "webpack-merge": "^4.2.1"
   },
   "keywords": []
