--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack-dev-server --config webpack.config.dev.js --open --hot ",
     "build": "webpack --config webpack.config.prod.js",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "",
     "format": "pretty-quick",
     "lint": "eslint ./"
   },
