--- a/package.json
+++ b/package.json
@@ -11,11 +11,6 @@
     "format": "pretty-quick",
     "lint": "eslint ./"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run format --staged && npm run lint"
-    }
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andela/persephone-ah-frontend.git"
@@ -30,16 +25,23 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.6.1",
+    "bootstrap": "^4.3.1",
+    "css-loader": "^3.1.0",
     "express": "^4.17.1",
+    "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
@@ -53,10 +55,14 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "husky": "^3.0.2",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react-hot-loader": "^4.12.10",
-    "redux-immutable-state-invariant": "^2.1.0",
+    "sass-loader": "^7.1.0",
     "webpack-merge": "^4.2.1"
   },
   "keywords": []
