chore(setup-tests): Setup unit,integration and end-to-end tests install jest and enzyme configure jest and enzyme install cypress for end-to-end tests add test scripts to package.json write unit tests write end-to-end test [#166816054]

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,20 @@
 language: node_js
 node_js:
   - 'node'
+addons:
+  apt:
+    packages:
+      - libgconf-2-4
+install:
+  - npm install cypress
+cache:
+  # cache both npm modules and Cypress binary
+  directories:
+    - ~/.npm
+    - ~/.cache
+  # install dependencies and check that Cypress can run
+  override:
+    - npm run cy:verify
 script:
-  - npm test
-after_success:
-  - npm run coveralls
+  - npm run test:coverage
+  - $(npm bin)/cypress run 
