chore(reusable-component): add loading indicator component
create a reusable component that indicates that a request is pending

[Starts #167623666]

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
     packages:
       - libgconf-2-4
 install:
-  - npm install cypress
+  - npm install
 cache:
   # cache both npm modules and Cypress binary
   directories:
@@ -17,4 +17,4 @@ cache:
     - npm run cy:verify
 script:
   - npm run test:coverage
-  - $(npm bin)/cypress run 
+  - $(npm bin)/cypress run
