--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.1",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "coveralls": "^3.0.5",
     "css-loader": "^3.1.0",
     "express": "^4.17.1",
