--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.1",
     "bootstrap": "^4.3.1",
-    "css-loader": "^3.1.0",
     "coveralls": "^3.0.5",
+    "css-loader": "^3.1.0",
     "express": "^4.17.1",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -46,8 +46,9 @@
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
     "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-select": "^3.0.4",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
