--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   "homepage": "https://github.com/andela/persephone-ah-frontend#readme",
   "dependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "coveralls": "^3.0.5",
@@ -52,6 +54,8 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
+    "react-toast-notifications": "^2.2.1",
+    "react-toastify": "^5.3.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
@@ -62,6 +66,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "cypress": "^3.4.1",
@@ -72,6 +77,7 @@
     "eslint-plugin-react": "^7.14.3",
     "husky": "^3.0.2",
     "jest": "^24.8.0",
+    "moxios": "^0.4.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
