--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   "homepage": "https://github.com/andela/persephone-ah-frontend#readme",
   "dependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "coveralls": "^3.0.5",
@@ -41,8 +43,11 @@
     "express": "^4.17.1",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "install": "^0.13.0",
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.7.0",
+    "nock": "^10.0.6",
+    "npm": "^6.10.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
@@ -52,6 +57,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
+    "react-toastify": "^5.3.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
@@ -62,6 +68,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "cypress": "^3.4.1",
@@ -72,6 +79,7 @@
     "eslint-plugin-react": "^7.14.3",
     "husky": "^3.0.2",
     "jest": "^24.8.0",
+    "moxios": "^0.4.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
